fail_crate/tests/into_iter_unknown_item.stderr
error: Could not infer iterator item type from field type. Use `#[new(into_iter = T)]` to specify the item type explicitly.
 --> fail_crate/tests/into_iter_unknown_item.rs:7:8
  |
7 |     x: u32
  |        ^^^
