fail_crate/tests/into_iter_unknown_item.rs
use inew::New;

#[derive(New)]
#[new(const)]
struct A {
    #[new(into_iter)]
    x: u32
}

fn main() {}
